// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Loader /> render matches snapshots 1`] = `
<Fragment>
  <Loaderstyles__StyledLoader>
    <Loaderstyles__LoaderImage
      alt="Pure Escapes"
      src=""
    />
    <Loaderstyles__LoaderText>
      Loading...
    </Loaderstyles__LoaderText>
  </Loaderstyles__StyledLoader>
</Fragment>
`;

exports[`<Loader /> render matches snapshots 2`] = `
<Fragment>
  <Loaderstyles__StyledLoader>
    <Loaderstyles__LoaderImage
      alt="Pure Escapes"
      src=""
    />
    <Loaderstyles__LoaderText>
      Loading
    </Loaderstyles__LoaderText>
  </Loaderstyles__StyledLoader>
</Fragment>
`;

exports[`<Loader /> render matches snapshots 3`] = `
<Fragment>
  <Loaderstyles__StyledLoader>
    <Loaderstyles__LoaderImage
      alt="Pure Escapes"
      src=""
    />
    <Loaderstyles__LoaderText>
      Loading...
    </Loaderstyles__LoaderText>
  </Loaderstyles__StyledLoader>
</Fragment>
`;

exports[`<Loader /> render matches snapshots 4`] = `"Loaded content"`;
